--- a/backend/package.json
+++ b/backend/package.json
@@ -16,7 +16,8 @@
     "mongodb": "^6.6.2",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "stripe": "^16.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.24.5",
